--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "prisma generate && prisma db push --accept-data-loss && next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate && mkdir -p /tmp && touch /tmp/dev.db"
   },
   "dependencies": {
     "@prisma/client": "^6.9.0",
