--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
-  "buildCommand": "prisma generate && prisma db push --accept-data-loss && next build --force",
+  "version": 2,
+  "buildCommand": "prisma generate && prisma db push --accept-data-loss && next build",
   "installCommand": "npm install",
   "framework": "nextjs",
   "outputDirectory": ".next",
