--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,7 @@
     "api/**/*.ts": {
       "memory": 1024,
       "maxDuration": 10,
-      "runtime": "nodejs18.x"
+      "runtime": "@vercel/node@20.x"
     }
   }
   
